@@ -1,4 +1,5 @@
-	* Added Channel.mode, to set the mode in the channel.
+	* Added Channel.mode, to set modes in the channel, and
+	Channel.limit, to set the channel limit.
 	
 	* Added a new plugin, Format, which offers several commands for
 	formatting strings on IRC.  Moved several commands from to it
